<resources>
    <string name="app_name">PlacowkaMedycznaJava</string>
    <string name="username">Pesel / Nazwa użytkownika</string>
    <string name="Login">Logowanie</string>
    <string name="password">Hasło</string>
    <string name="log_in">Zaloguj</string>
    <string name="redirect_register">Zarejestruj konto tutaj</string>
    <string name="settings">Ustawienia</string>
    <string name="logout">Wyloguj</string>
    <string name="appointments">Wolne Terminy</string>
    <string name="userpanel">Panel Pacjenta</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="personel_all_choice">Wszyscy</string>
    <string name="speciality_all_choice">Wszystkie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button">Szukaj</string>
    <string name="Registration">Rejestracja</string>
    <string name="redirect_login">Masz już konto? Zaloguj się tutaj</string>
    <string name="username_register">Nazwa użytkownika</string>
    <string name="first_name_register">Imię</string>
    <string name="surname_register">Nazwisko</string>
    <string name="pesel_register">Pesel</string>
    <string name="phone_register">Numer telefonu</string>
    <string name="city_register">Miasto</string>
    <string name="city_code_register">Kod pocztowy np. \"33-230\"</string>
    <string name="street_register">Ulica</string>
    <string name="street_number_register">Numer domu/mieszkania</string>
    <string name="password_repeat">Powtórz hasło</string>
    <string name="house_number_register">Numer domu/mieszkania</string>
    <string name="register">Zarejestruj</string>
    <string name="account_settings">Ustawienia konta</string>
    <string name="personal_settings">Dane osobiste</string>
    <string name="new_email">Nowe e-mail</string>
    <string name="change_button">Zmień</string>
    <string name="old_password">Stare hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="new_name">Nowe imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="phone">Numer telefonu</string>
    <string name="new_city_code">Nowy kod pocztowy</string>
    <string name="new_city">Nowe miasto</string>
    <string name="new_street">Nowa ulica</string>
    <string name="new_house_number">Nowy nr domu</string>
    <string name="edit">Edytuj</string>
    <string name="address">Adres</string>
    <string name="account">Konto</string>
    <string name="speciality">Specjalność</string>
    <string name="personel">Personel</string>
    <string name="appointment_dates">Terminy</string>
    <string name="no_connection_toast">Brak połączenia z internetem</string>
    <string name="register_successfull">Zarejestrowano pomyślnie</string>
    <string name="db_error_register">Rejestracja nie powiodła się, upewnij się czy pola zostały prawidłowo wypełnione</string>
    <string name="db_general_error">Wystąpił błąd podczas próby połączenia się z serwerem</string>
    <string name="booking_confirmation">Czy chcesz zarezerwować tą wizytę?</string>
    <string name="booking_successfull">Pomyślnie zarezerwowano wizytę</string>
    <string name="booking_error">Nie udało się zarezerwować wizyty, być może już nie istnieje</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="is_not_authenticated">Użytkownik nie istnieje</string>
    <string name="appointment_cancel_successfull">Anulowano wizytę</string>
    <string name="new_name_empty">Nowe imie nie może być puste</string>
    <string name="new_name_successfull">Pomyślnie zmieniono imię</string>
    <string name="field_empty_warning">Pole nie może być puste</string>
    <string name="fields_empty_warning">Pola nie mogą być puste</string>
    <string name="field_update_successfull">Pomyślnie zaktualizowano twoje dane</string>
    <string name="db_processing_error">Wydarzył się błąd podczas przetwarzania odpowiedzi serwera</string>
    <string name="new_email_error">Nowy email jest niepoprawny, być może jest zajęty</string>
    <string name="new_pwd_successfull">Pomyślnie zmieniono hasło</string>
    <string name="new_pwds_different">Nowe hasła muszą się zgadzać</string>
    <string name="new_pwd_error">Wydarzył się błąd. Upewnij się, że wprowadzasz poprawne hasło</string>
    <string name="company_namy">Medicenter</string>
    <string name="logout_question">Wylogować?</string>
    <string name="delete_account">Usuń konto</string>
    <string name="delete_account_question">Czy na pewno chcesz usunąć konto?</string>
    <string name="delete_account_successful">Pomyślnie usunięto konto</string>
    <string name="delete_account_error">Wystąpił błąd podczas usuwania konta</string>
</resources>