<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ShowIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_appointments"
            android:title="@string/appointments" />
        <item
            android:id="@+id/nav_userPanel"
            android:icon="@drawable/ic_userpanel"
            android:title="@string/userpanel" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>