<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/password_edit_sublayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" >

    <EditText
        android:textSize="16sp"
        android:inputType="textPassword"
        android:ems="12"
        android:id="@+id/oldpassword_edit_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:textSize="16sp"
        android:inputType="textPassword"
        android:ems="12"
        android:id="@+id/password_edit_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oldpassword_edit_input"
        android:hint="@string/new_password" />

    <EditText
        android:textSize="16sp"
        android:inputType="textPassword"
        android:ems="12"
        android:id="@+id/password_edit_repeat_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_input"
        android:hint="@string/password_repeat"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/password_edit_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_button"
        android:layout_below="@+id/password_edit_input"
        android:layout_toEndOf="@+id/password_edit_repeat_input"
        android:layout_marginStart="10dp"/>
</RelativeLayout>